# val-ai

./: Makefile  pyproject.toml
agent/: chat.py  client.py  config.py  context.py  fibonacci.py  main.py  prompt.py  signals.py  skillgen.py  systemparts.py  systemprompt.py  toolgen.py  tools.py  ui.py
agent/bookmarks/: extraction.py  loader.py  tool.py
agent/client/: __init__.py  client.py  fibonacci.py  format.py  json.py  typedefs.py
agent/context/: __init__.py  context.py
agent/eye/: bookmarks.py  eye.py  files.py  flow.py
agent/prompt/: __init__.py  prompt.py  signals.py
agent/search/: arxiv.py
apps/agent/: .gitignore  Makefile  pyproject.toml
apps/agent/agent/: chat.py  config.py  main.py  systemprompt.py  toolgen.py  tools.py  ui.py  worker.py
apps/agent/agent/bookmarks/: extraction.py  loader.py  tool.py
apps/agent/agent/client/: client.py  format.py  typedefs.py
apps/agent/agent/context/: context.py
apps/agent/agent/eye/: bookmarks.py  example.py  files.py  flow.py
apps/agent/agent/prompt/: prompt.py
apps/agent/agent/search/: arxiv.py  search.py
apps/agent/agent/weather/: weather.py
libs/client/: Makefile  pyproject.toml
libs/client/client/: __init__.py  backoff.py  client.py  config.py  error.py  fibonacci.py  format.py  json.py  typedefs.py
libs/client/client/backoff/: __init__.py  backoff.py  delays.py
libs/client/tests/: test_config.py
libs/context/: main.py  pyproject.toml
libs/eye/: pyproject.toml
libs/eye/eye/: bookmarks.py  example.py  eye.py  files.py  flow.py
libs/promptmachine/: Makefile  pyproject.toml
libs/promptmachine/promptmachine/: prompt.py
libs/tools/: pyproject.toml
libs/tools/tools/: toolgen.py
libs/tools/tools/tools/: __init__.py  fileops.py  tools.py
prompts/: main.md  tool_desc.md
