[project]
name = "val-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ['libs/*', 'apps/*']

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -v --tb=short"
