[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.20.0",
    "pathspec>=1.1.1",
    "pygixml>=0.12.0",
    "requests>=2.33.1",
    "selectolax>=0.4.10",
    "watchdog>=6.0.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.60.0",
    "types-requests>=2.33.0.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['agent']
