[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tools",
    "promptmachine",
    "client",
    "context",
    "msgspec>=0.20.0",
    "pathspec>=1.1.1",
    "pygixml>=0.12.0",
    "requests>=2.33.1",
    "selectolax>=0.4.10",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.60.0",
    "types-requests>=2.33.0.20260408",
]

[tool.uv.sources]
tools = { workspace = true }
promptmachine = { workspace = true }
client = { workspace = true }
context = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['agent']
