[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"promptmachine",
	"client",
]

[tool.uv.sources]
promptmachine = { workspace = true }
client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['tools']

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
